18943
{code}
class A {
  this match {
    case this => println("foo")
    case _ => ???
   }
}
{code}

A.scala:3: error: '.' expected but '=>' found.
    case this => println("foo")
              ^
A.scala:4: error: identifier expected but ';' found.
    case _ => ???
^
two errors found
